examples/test/testpolicy5216.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5216
  namespace: namespace420
spec:
  podSelector:
    matchLabels:
      key29: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value31
          key7: value37
      podSelector:
        matchLabels:
          key26: value35
          key35: value31
          key28: value16
